# Search_Engine

./: CMakeLists.txt  README.md  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  GtestTests  TestsCaseSearchServer.cpp  TestsInvertedIndexFunctionality.cpp  configMissingWord.json  configSearchSimple.json  configSearchTestTop5.json  configTestBasic.json  configTestBasic2.json  requestsMissingWord.json  requestsSearchTestSimple.json  requestsSearchTestTop5.json  requestsTestBasic.json  requestsTestBasic2.json
